working on the user module/user registration and much more

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 spring.application.name=todo2ddd
+
+spring.threads.virtual.enabled=true
+
+spring.docker.compose.enabled=true
+spring.docker.compose.lifecycle-management=none
+
+#spring.main.allow-bean-definition-overriding=true
+
+#spring.autoconfigure.exclude=org.springframework.modulith.events.mongodb.MongoDbTransactionAutoConfiguration
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/todo2ddd
+#spring.datasource.username=todo2ddd
+#spring.datasource.password=secret
+spring.datasource.hikari.auto-commit=false
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+
+spring.sql.init.mode=NEVER
+
+spring.cache.type=SIMPLE
+
+#spring.flyway.enabled=false
+
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=todo2ddd
