--- a/src/main/resources/problem_messages.properties
+++ b/src/main/resources/problem_messages.properties
@@ -2,7 +2,12 @@
 common.entity.version_mismatch="Entity/Resource is outdated. Please refresh your data!"
 
 common.username.unacceptable="The chosen username is unacceptable. It must be between 5 and 30 characters long and can only contain English letters, numbers, underscores, and hyphens."
+common.user_id.missing="User id not provided."
+
 user.plain_password.unacceptable="The chosen password is unacceptable. It must be at least 8 characters long and must not contain any spaces."
 user.client_full_name.unacceptable="The full name is unacceptable. It must be between 5 and 30 characters long."
 user.admin_full_name.unacceptable="The full name is unacceptable. It must be between 5 and 40 characters long."
 user.info.invalid="The expected information for user registration was not found. Please contact support."
+user.protected_password.missing="Protected password not provided."
+user.password_confirmation.failed="The entered password does not match its confirmation."
+user.username.in_use="The username you provided is already associated with another account."
