working on todo module

--- a/src/main/resources/problem_messages.properties
+++ b/src/main/resources/problem_messages.properties
@@ -11,3 +11,13 @@ user.info.invalid="The expected information for user registration was not found.
 user.protected_password.missing="Protected password not provided."
 user.password_confirmation.failed="The entered password does not match its confirmation."
 user.username.in_use="The username you provided is already associated with another account."
+
+user.login.invalid_credentials=""
+
+todo.title.unacceptable=""
+todo.description.unacceptable=""
+todo.info.invalid="The expected information for todo was not found. Please contact support."
+todo.status.not_startable="The todo is not startable"
+todo.status.not_deferrable="The todo is not deferrable"
+todo.status.not_completable="The todo is not completable"
+todo.status.not_cancellable="The todo is not cancellable"
